@@ -1,31 +1,36 @@
-<html
+<div
     xmlns="http://www.w3.org/1999/xhtml"
     xmlns:tal="http://xml.zope.org/namespaces/tal"
     xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-    tal:omit-tag="python: True"
-    i18n:domain="ftw.blog">
+    i18n:domain="ftw.blog"
+    class="portletWrapper">
+    <dl class="portlet portletBlogArchive portletArchiveListing">
 
-    <div class="portletWrapper">
-        <dl class="portlet portletBlogArchive">
 
-            <dt class="portletHeader">
-                <span i18n:translate="">
-                    Archive
-                </span>
-            </dt>
+        <dt class="portletHeader">
+            <span i18n:translate="">
+                Archive
+            </span>
+        </dt>
 
-            <dd class="portletItem">
-                <ul>
-                    <li tal:repeat="item view/archive_summary">
-                        <a tal:attributes="href item/url;
-                                           title item/title"
-                           tal:content="python: '%s (%s)' % (item['title'], item['number'])" i18n:translate=""/>
-                    </li>
-                </ul>
-            </dd>
+        <dd class="portletItem">
+            <dl tal:repeat="year view/archive_summary"
+                tal:attributes="class python:year.get('mark') and 'collapsible' or 'collapsible collapsedOnLoad'">
 
-        </dl>
-
-    </div>
-
-</html>
+                <dt class="collapsibleHeader">
+                    <span class="yearnumber" tal:content="python: '%s (%s)' % (year.get('title'), year.get('number'))" />
+                </dt>
+                <dd class="collapsibleContent">
+                    <li tal:repeat="month year/months"
+                        tal:attributes="class python:month.get('mark') and 'month highlight' or 'month'">
+                        <a tal:attributes="
+                            href month/url;
+                            title month/title"
+                            tal:content="python: '%s (%s)' % (month.get('title'), month.get('number'))"
+                            i18n:translate="" />
+                        </li>
+                </dd>
+            </dl>
+        </dd>
+    </dl>
+</div>
